--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ appdirs
 attrs
 black
 blosc2
-botocore==1.34.54
-certifi==2022.12.7
+botocore
+certifi
 charset-normalizer
 click
 contourpy
@@ -19,8 +19,8 @@ fsspec
 fvcore==0.1.5.post20221221
 gitdb
 GitPython
-h5py>=3.10.0
-huggingface-hub>=0.22.0
+h5py
+huggingface-hub
 idna
 imageio
 imath
@@ -45,10 +45,10 @@ OpenEXR
 packaging
 pandas
 pathspec
-pillow==10.2.0
+pillow
 platformdirs
 portalocker
-protobuf==4.25.3
+protobuf
 psutil
 py-cpuinfo
 pycodestyle
@@ -57,7 +57,7 @@ pyparsing
 python-dateutil
 # pytorch3d is needed only for chamfer distance calculation
 # you can compile it from ops/knn and avoid this dependency
-pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable
+# pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable
 pytz
 PyYAML
 requests
@@ -73,13 +73,13 @@ tabulate
 termcolor
 timm
 tqdm
-triton==2.2.0
+triton
 typing_extensions
-tzdata==2024.1
-urllib3==1.26.13
+tzdata
+urllib3
 wandb
 yacs
-torch==2.2.0
-torchvision==0.17.0
-torchaudio==2.2.0
-xformers==0.0.24
+# torch==2.2.0
+# torchvision==0.17.0
+# torchaudio==2.2.0
+xformers
