--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,6 @@ yacs
 # torchvision==0.17.0
 # torchaudio==2.2.0
 xformers
-torch==2.5.1 --index-url https://download.pytorch.org/whl/cu118
-torchvision==0.20.1 --index-url https://download.pytorch.org/whl/cu118
-torchaudio==2.5.1 --index-url https://download.pytorch.org/whl/cu118
+torch==2.5.1
+torchvision==0.20.1
+torchaudio==2.5.1
